--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "types": "./dist/index.d.ts",
         "default": "./dist/index.umd.cjs"
       }
-    }
+    },
+    "./dist/style.css": "./dist/style.css"
   },
   "main": "./dist/index.umd.cjs",
   "module": "./dist/index.js",
