--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "extends": "@simoneconti/eslint-config"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@simoneconti/eslint-config": "^1.0.4",
@@ -52,6 +54,7 @@
     "@types/node": "^20.1.4",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^4.0.0",
     "sass": "^1.62.1",
     "typescript": "^5.0.2",
