--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
   "scripts": {
     "build": "tsc && vite build",
     "clean": "npx --ignore-existing --quiet rimraf package-lock.json node_modules",
-    "dev": "vite",
+    "dev": "npm-run-all --parallel compile:watch start",
+    "start": "vite",
     "lint": "esw --ext .js,.jsx,.ts,.tsx src",
     "preview": "vite preview",
-    "sort": "npx sort-package-json"
+    "sort": "npx sort-package-json",
+    "compile": "tsc",
+    "compile:watch": "npm run compile -- --watch"
   },
   "prettier": "@simoneconti/prettier-config",
   "eslintConfig": {
@@ -56,6 +59,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.62.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
